# qstamina

./: CMakeLists.txt  translations_release.sh  translations_update.sh
.github/workflows/: release.yml
src/: config.cpp  inlinefield.cpp  inlinefield.h  keyboard.cpp  lessongenerator.cpp  main.cpp  moc_about.cpp  moc_keyboard.cpp  moc_predefs.h  moc_results.cpp  moc_settingsform.cpp  moc_sounds.cpp  moc_stamina.cpp  moc_textfield.cpp  qrc_res.cpp  results.cpp  results.h  src.pro  stamina.cpp  stamina.h  textfield.cpp  textfield.h  ui_about.h  ui_keyboard.h  ui_results.h  ui_settingsform.h  ui_stamina.h
src/resources/: qstamina.desktop
src/resources/qm/: qstamina_ru.qm
src/resources/ts/: qstamina_ru.ts
